--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                 <div class="text-flex">
                     <div class="box-text">
                         <p>
-                            "Uma parceria que transforma pela <span>assessoria pedagógica</span> constante e pelas relações humanas
+                            "Uma parceria que transforma pela <span>assessoria pedagógica</span> constante e pelas
+                            relações humanas
                             com
 
                             toda a equipe. Ser Digital Class é ser
@@ -152,7 +153,8 @@
                         <p>
                             "A Digital Class foi a decisão mais inteligente que tomamos. Um dos resultados foi a
                             <span>construção de
-                            identidade</span> dentro da nossa comunidade, com um perfil sólido que fortalece a nossa imagem."
+                                identidade</span> dentro da nossa comunidade, com um perfil sólido que fortalece a nossa
+                            imagem."
                         </p>
                         <p id="color-text">
                             DC Belo Horizonte (MG)
@@ -162,13 +164,48 @@
                     </div>
                     <div class="box-text">
                         <p>
-                            "Estamos prontos para concorrer com as grandes redes. Nossos <span>trabalhos pedagógicos</span> ganharam
+                            "Estamos prontos para concorrer com as grandes redes. Nossos <span>trabalhos
+                                pedagógicos</span> ganharam
                             um outro patamar. A nossa escola hoje está entre as melhores do país."
                         </p>
                         <p id="color-text">
                             DC Lago Norte (DF)
                             <br>
                             Parceiro DC há 11 anos.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section section03">
+                <div id="imageThree" class="flex-s3">
+                    <div class="image-s3">
+                        <img src="imagens/Girl-smartphone.png" alt="">
+                    </div>
+                    <div class="texts3">
+                        <h2>
+                            <span>Resultados</span>
+                        </h2>
+                        <br>
+                        <p>
+                            Desde sua fundação, o DC preza por resultados ao longo de toda a jornada educacional tanto
+                            para o estudante, com experiências enriquecedoras e uma formação integral, quanto para a
+                            escola, com um apoio completo de pedagogia e gestão.
+                        </p>
+                    </div>
+                </div>
+
+                <div id="imageThree" class="flex-s3">
+                    <div class="image-s3">
+                        <img src="imagens/Nootbook.png" alt="">
+                    </div>
+                    <div class="texts3">
+                        <h2>
+                            <span>Inovação</span>
+                        </h2>
+                        <br>
+                        <p>
+                            Com uma metodologia que alia conteúdo forte e formação integral, nós somos a primeira plataforma de educação a explorar a tecnologia em sala de aula, oferecendo aos estudantes, a construção do conhecimento de forma inteligente e inovadora com as nossas ferramentas digitais, videoaulas, jogos e muito mais!
                         </p>
                     </div>
                 </div>
