--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <a href="home.html">HOME</a>
             <a href="index.html">QUEM SOMOS?</a>
             <a href="contatos.html">CONTATE-NOS</a>
-            <a href="#">CURSOS</a>
-            <a href="#">I.A</a>
+            <a href="cursos.html">CURSOS</a>
+            <a href="i.a.html">I.A</a>
         </div>
         <div class="login">
             <i class="fa-solid fa-user"></i>
