--- a/contatos.html
+++ b/contatos.html
@@ -23,8 +23,8 @@
     <a href="home.html">HOME</a>
     <a href="index.html">QUEM SOMOS?</a>
     <a href="contatos.html">CONTATE-NOS</a>
-    <a href="">CURSOS</a>
-    <a href="">I.A</a>
+    <a href="cursos.html">CURSOS</a>
+    <a href="i.a.html">I.A</a>
 </ul>
    
 <div class="login">
