--- a/i.a.html
+++ b/i.a.html
@@ -155,5 +155,17 @@
         <script src="https://unpkg.com/scrollreveal"></script>
         <script src="contatos.js"></script>
         <!-- Nossos Scripts -->
+
+        <div vw class="enabled">
+            <div vw-access-button class="active"></div>
+            <div vw-plugin-wrapper>
+                <div class="vw-plugin-top-wrapper"></div>
+            </div>
+        </div>
+        <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+        <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
+        <!-- Acessibilidade em libras -->
 </body>
 </html>
