--- a/contatos.html
+++ b/contatos.html
@@ -241,5 +241,18 @@
 
         <script src="https://unpkg.com/scrollreveal"></script>
         <script src="contatos.js"></script>
+
+
+        <div vw class="enabled">
+            <div vw-access-button class="active"></div>
+            <div vw-plugin-wrapper>
+                <div class="vw-plugin-top-wrapper"></div>
+            </div>
+        </div>
+        <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+        <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
+        <!-- Acessibilidade em libras -->
     </body>
 </html>
