--- a/i.a.html
+++ b/i.a.html
@@ -154,6 +154,7 @@
         
         <script src="https://unpkg.com/scrollreveal"></script>
         <script src="contatos.js"></script>
+        <script src="ia.js"></script>
         <!-- Nossos Scripts -->
 
         <div vw class="enabled">
