--- a/home.html
+++ b/home.html
@@ -120,7 +120,7 @@
                                     foco na plataforma EAD integrada à nossa
                                     <span>I.A</span>, somos uma plataforma
                                     educacional com tempo de atuação no mercado,
-                                    com grande potencial de inovação. br
+                                    com grande potencial de inovação. <br> <br>
                                     Oferecemos apoio completo às escolas em
                                     todas as etapas da trajetória escolar,
                                     mantendo nosso compromisso com a excelência
@@ -162,7 +162,7 @@
                             <div class="h1-button">
                                 <!--  Uma div com um título, parágrafo, e um botão -->
                                 <h1 class="h1">
-                                    Nosso <span class="span-section3">DNA</span>
+                                    Nosso<span class="span-section3"> DNA</span>
                                 </h1>
                                 <!--  Nosso primeiro título maior -->
                                 <p>
