--- a/i.a.html
+++ b/i.a.html
@@ -167,6 +167,10 @@
         <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
+
+
+<script src="ia.js"></script>
+
         <!-- Acessibilidade em libras -->
 </body>
 </html>
