--- a/contatos.html
+++ b/contatos.html
@@ -69,7 +69,7 @@
         <p>
             A Digital class é uma plataforma de educação que, por meio de escolas parceiras, está presente em todo o Brasil, oferecendo soluções educacionais para alunos de todas as fases: da Educação juvenil ao ensino médio. <br><br>
 
-            Oferecemos o material didático para que escolas e estudantes possam impulsionar suas jornadas, mas não temos influência direta nas decisões de grade horária, corpo docente, linha pedagógica e quaisquer outras questões internas das escolas parceiras. Para situações específicas de cada escola, por favor entre em contato diretamente com a coordenação do colégio. <br>
+            Oferecemos o material didático para que escolas e estudantes possam impulsionar suas jornadas, mas não temos influência direta nas decisões de grade horária, corpo docente, linha pedagógica e quaisquer outras questões internas das escolas parceiras. Para situações específicas, como, inscrições e nossas unidades, por favor entre em contato diretamente com a coordenação da instituição. <br>
         </p> 
 
         </section>
