--- a/home.html
+++ b/home.html
@@ -162,7 +162,7 @@
                             <div class="h1-button">
                                 <!--  Uma div com um título, parágrafo, e um botão -->
                                 <h1 class="h1">
-                                    Nosso<span class="span-section3"> DNA</span>
+                                  Nosso <span>DNA</span>
                                 </h1>
                                 <!--  Nosso primeiro título maior -->
                                 <p>
