--- a/index.html
+++ b/index.html
@@ -34,7 +34,28 @@
         <div class="login">
             <i class="fa-solid fa-user"></i>
         </div>
+
+        <div class="btn-abrir-menu" id="btn-menu">
+            <i class="fa-regular fa-bars"></i>
+        </div>
+
+        <div class="mobile-menu" id="mobile-menu">
+            <div class="btn-fechar">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="index.html">QUEM SOMOS?</a></li>
+                    <li><a href="contatos.html">CONTATE-NOS</a></li>
+                    <li><a href="cursos.html">CURSOS</a></li>
+                    <li><a href="i.a.html">I.A</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
+
+    <div class="overlay-menu"></div>
 
     <!-- Inicio do header -->
     <header>
