--- a/cursos.html
+++ b/cursos.html
@@ -15,6 +15,26 @@
 </head>
 <!-- INÍCIO DA PÁGINA HOME -->
 
+<!-- div ultilizada para fazer o cadastro no site -->
+      
+
+<div onclick="menuShow()" class="mobile-menu-icon">
+    <button>
+        <i class="fa-solid fa-bars"></i>
+    </button>
+</div>
+
+<div class="mobile-menu">
+    <ul>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="index.html">QUEM SOMOS?</a></li>
+        <li><a href="contatos.html">CONTATE-NOS</a></li>
+        <li></li><a href="cursos.html">CURSOS</a>
+        <li><a href="i.a.html">I.A</a></li>
+    </ul>
+</div>
+</div>
+
 <body>
     <header>
         <!-- Início do cabeçalho -->
@@ -29,12 +49,6 @@
             <a href="i.a.html">I.A</a>
         </ul>
 
-
-        <div class="login">
-            <!-- Uma div para poscionar e estilizar no CSS -->
-            <i class="fa-solid fa-user"></i>
-            <!-- Ícone do boneco/Login -->
-        </div>
     </header>
     <!-- Fim do cabeçalho -->
 
