--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         </div>
 
 <!-- div ultilizada para fazer o cadastro no site -->
-        <div class="login">
-            <i class="fa-solid fa-user"></i>
-        </div>
+      
 
         <div onclick="menuShow()" class="mobile-menu-icon">
             <button>
@@ -82,7 +80,7 @@
         <!-- Main para informar que esta é a parte principal do site -->
 
         <section>
-<!-- inicio da sectio 1  -->
+<!-- inicio da section 1  -->
             <section class="section section01"> 
 <!-- div ultilizada para poder conhecer sobre o digital class -->
                 <div class="text">
