--- a/home.html
+++ b/home.html
@@ -14,6 +14,29 @@
     </head>
     <!-- INÍCIO DA PÁGINA HOME -->
     <body>
+
+
+
+<!-- div ultilizada para fazer o cadastro no site -->
+      
+
+<div onclick="menuShow()" class="mobile-menu-icon">
+    <button>
+        <i class="fa-solid fa-bars"></i>
+    </button>
+</div>
+
+<div class="mobile-menu">
+    <ul>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="index.html">QUEM SOMOS?</a></li>
+        <li><a href="contatos.html">CONTATE-NOS</a></li>
+        <li></li><a href="cursos.html">CURSOS</a>
+        <li><a href="i.a.html">I.A</a></li>
+    </ul>
+</div>
+</div>
+
         <header>
             <!-- Início do cabeçalho -->
             <img src="imagens/Logo-DigitalClass.png"
@@ -28,11 +51,7 @@
                 <a href="i.a.html">I.A</a>
             </ul>
 
-            <div class="login">
-                <!-- Uma div para poscionar e estilizar no CSS -->
-                <i class="fa-solid fa-user"></i>
-                <!-- Ícone do boneco/Login -->
-            </div>
+       
         </header>
         <!-- Fim do cabeçalho -->
 
