--- a/home.html
+++ b/home.html
@@ -200,7 +200,7 @@
                                 <a href><button>Saiba mais!</button></a>
                                 <!-- Botão com uma âncora -->
                             </div>
-
+</div>
                         </div>
                     </nav>
                 </section>
