--- a/home.html
+++ b/home.html
@@ -16,27 +16,6 @@
     <body>
 
 
-
-<!-- div ultilizada para fazer o cadastro no site -->
-      
-
-<div onclick="menuShow()" class="mobile-menu-icon">
-    <button>
-        <i class="fa-solid fa-bars"></i>
-    </button>
-</div>
-
-<div class="mobile-menu">
-    <ul>
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="index.html">QUEM SOMOS?</a></li>
-        <li><a href="contatos.html">CONTATE-NOS</a></li>
-        <li></li><a href="cursos.html">CURSOS</a>
-        <li><a href="i.a.html">I.A</a></li>
-    </ul>
-</div>
-</div>
-
         <header>
             <!-- Início do cabeçalho -->
             <img src="imagens/Logo-DigitalClass.png"
@@ -128,6 +107,16 @@
 
                         <div class="container-section2">
                             <!-- Um container/Div pai para posicionar e estilizar os itens -->
+
+
+                            <div class="img-section2">
+                                <!-- Uma div que guarda uma imagem -->
+                                <img
+                                    src="imagens/Black and Gold Simple Business Man LinkedIn Profile Picture.png"
+                                    alt="img-section2">
+                            </div>   
+
+
                             <div class="h1-button">
                                 <!--  Uma div com um título, parágrafo, e um botão -->
                                 <h1>
@@ -152,12 +141,6 @@
                                 <!-- Botão com uma âncora -->
                             </div>
 
-                            <div class="img-section2">
-                                <!-- Uma div que guarda uma imagem -->
-                                <img
-                                    src="imagens/Black and Gold Simple Business Man LinkedIn Profile Picture.png"
-                                    alt="img-section2">
-                            </div>
                         </div>
                     </nav>
                 </section>
@@ -210,27 +193,22 @@
             <footer id="imagem3">
                 <!-- INÍCIO DO NOSSO RODAPÉ -->
                 <nav>
+
+
+                 
+
                     <!--  Usando o nav para informar que a sessão é navegável -->
                     <div class="container-footer">
                         <!-- Um container/Div pai para estilizar e posicionar os itens -->
 
-                        <div class="itens-footer1">
-                            <!--  Uma div com âncoras e ícones do font awesome -->
-                            <a href>
-                                <i class="fa-brands fa-instagram"><span>@digital_class</span></i>
-                            </a>
-                            <a href>
-                                <i class="fa-solid fa-envelope"><span>digitalClassWorking@gmail.com</span></i>
-                            </a>
-                            <a href>
-                                <i class="fa-brands fa-facebook"><span>Digital
-                                        Class</span></i>
-                            </a>
-                        </div>
+                           <img src="imagens/Logo-DigitalClass.png"
+                    alt="Logo-DigitalClass">
+                <!--  Logo do site  -->
+
 
                         <div class="itens-footer2">
                             <!-- Uma div que guarda uma lista com âncoras -->
-                            <ul>
+                            <ul  class="páginas">
                                 <a href>
                                     <li> <span>Páginas</span></li>
                                 </a>
@@ -254,7 +232,7 @@
 
                         <div class="itens-footer2">
                             <!--  Outra div que também guarda uma lista com âncoras -->
-                            <ul>
+                            <ul class="páginas">
                                 <a href>
                                     <li> <span>Contato</span></li>
                                 </a>
@@ -278,7 +256,7 @@
 
                         <div class="itens-footer2">
                             <!--  Última div que guarda uma lista com âncoras -->
-                            <ul>
+                            <ul class="páginas">
                                 <a href>
                                     <li> <span>Soluções</span></li>
                                 </a>
@@ -298,12 +276,11 @@
                                     <li>Gestão de ensino</li>
                                 </a>
                             </ul>
-
                         </div>
+
+
+
                     </nav>
-                    <img src="imagens/Logo-DigitalClass.png"
-                        alt="Logo-DigitalClass">
-                    <!--  Logo do site  -->
                 </div>
 
             </footer>
