--- a/index.html
+++ b/index.html
@@ -243,108 +243,102 @@
             </section>
 
     </main>
-    <footer>
-        <!-- INÍCIO DO NOSSO RODAPÉ -->
-        <nav>
-            <!--  Usando o nav para informar que a sessão é navegável -->
-            <div class="container-footer">
-                <!-- Um container/Div pai para estilizar e posicionar os itens -->
 
-                <div class="itens-footer1">
-                    <!--  Uma div com âncoras e ícones do font awesome -->
-                    <a href="">
-                        <i class="fa-brands fa-instagram"><span id="text">@digital_class</span></i>
-                    </a>
-                    <a href="">
-                        <i class="fa-solid fa-envelope"><span id="text">digitalClassWorking@gmail.com</span></i>
-                    </a>
-                    <a href="">
-                        <i class="fa-brands fa-facebook"><span id="text">Digital Class</span></i>
-                    </a>
+    <footer id="imagem3">
+                <!-- INÍCIO DO NOSSO RODAPÉ -->
+                <nav>
+
+
+                 
+
+                    <!--  Usando o nav para informar que a sessão é navegável -->
+                    <div class="container-footer">
+                        <!-- Um container/Div pai para estilizar e posicionar os itens -->
+
+                           <img src="imagens/Logo-DigitalClass.png"
+                    alt="Logo-DigitalClass" class="img">
+                <!--  Logo do site  -->
+
+
+                        <div class="itens-footer2">
+                            <!-- Uma div que guarda uma lista com âncoras -->
+                            <ul  class="páginas">
+                                <a href>
+                                    <li> <span>Páginas</span></li>
+                                </a>
+                                <a href="home.html">
+                                    <li>Home</li>
+                                </a>
+                                <a href="index.html">
+                                    <li>Quem somos?</li>
+                                </a>
+                                <a href="contatos.html">
+                                    <li>Contate-nos</li>
+                                </a>
+                                <a href>
+                                    <li>Cursos</li>
+                                </a>
+                                <a href>
+                                    <li>Blog</li>
+                                </a>
+                            </ul>
+                        </div>
+
+                        <div class="itens-footer2">
+                            <!--  Outra div que também guarda uma lista com âncoras -->
+                            <ul class="páginas">
+                                <a href>
+                                    <li> <span>Contato</span></li>
+                                </a>
+                                <a href>
+                                    <li>Fale com a Digital Class</li>
+                                </a>
+                                <a href>
+                                    <li>Ouvidoria</li>
+                                </a>
+                                <a href>
+                                    <li>FAQ</li>
+                                </a>
+                                <a href>
+                                    <li>Trabalhe conosco</li>
+                                </a>
+                                <a href>
+                                    <li>Dúvidas</li>
+                                </a>
+                            </ul>
+                        </div>
+
+                        <div class="itens-footer2">
+                            <!--  Última div que guarda uma lista com âncoras -->
+                            <ul class="páginas">
+                                <a href>
+                                    <li> <span>Soluções</span></li>
+                                </a>
+                                <a href>
+                                    <li>Recursos Didáticos</li>
+                                </a>
+                                <a href>
+                                    <li>Educação Digital</li>
+                                </a>
+                                <a href>
+                                    <li>Simulados</li>
+                                </a>
+                                <a href>
+                                    <li>Consultoria</li>
+                                </a>
+                                <a href>
+                                    <li>Gestão de ensino</li>
+                                </a>
+                            </ul>
+                        </div>
+
+
+
+                    </nav>
                 </div>
 
-
-                <div class="itens-footer2">
-                    <!-- Uma div que guarda uma lista com âncoras -->
-                    <ul>
-                        <a href="">
-                            <li> <span>Páginas</span></li>
-                        </a>
-                        <a href="home.html">
-                            <li>Home</li>
-                        </a>
-                        <a href="index.html">
-                            <li>Quem somos?</li>
-                        </a>
-                        <a href="contatos.html">
-                            <li>Contate-nos</li>
-                        </a>
-                        <a href="">
-                            <li>Cursos</li>
-                        </a>
-                        <a href="">
-                            <li></li>
-                        </a>
-                    </ul>
-                </div>
-
-
-                <div class="itens-footer2">
-                    <!--  Outra div que também guarda uma lista com âncoras -->
-                    <ul>
-                        <a href="">
-                            <li> <span>Contato</span></li>
-                        </a>
-                        <a href="">
-                            <li>Fale com a Digital Class</li>
-                        </a>
-                        <a href="">
-                            <li>Ouvidoria</li>
-                        </a>
-                        <a href="">
-                            <li>FAQ</li>
-                        </a>
-                        <a href="">
-                            <li>Trabalhe conosco</li>
-                        </a>
-                        <a href="">
-                            <li>Dúvidas</li>
-                        </a>
-                    </ul>
-                </div>
-
-
-                <div class="itens-footer2">
-                    <!--  Última div que guarda uma lista com âncoras -->
-                    <ul>
-                        <a href="">
-                            <li> <span>Soluções</span></li>
-                        </a>
-                        <a href="">
-                            <li>Recursos Didáticos</li>
-                        </a>
-                        <a href="">
-                            <li>Educação Digital</li>
-                        </a>
-                        <a href="">
-                            <li>Simulados</li>
-                        </a>
-                        <a href="">
-                            <li>Consultoria</li>
-                        </a>
-                        <a href="">
-                            <li>Gestão de ensino</li>
-                        </a>
-                    </ul>
-
-                </div>
-        </nav>
-        <img src="imagens/Logo-DigitalClass.png" alt="Logo-DigitalClass">
-        <!--  Logo do site  -->
-        </div>
-
-    </footer>
-    <!--  FIM DO RODAPÉ -->
+            </footer>
+            <!--  FIM DO RODAPÉ -->
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
