--- a/cursos.html
+++ b/cursos.html
@@ -13,27 +13,8 @@
     <!-- Ícones do font awesome-->
     <link rel="stylesheet" href="cursos.css">
 </head>
-<!-- INÍCIO DA PÁGINA HOME -->
+<!-- INÍCIO DA PÁGINA CURSOS -->
 
-<!-- div ultilizada para fazer o cadastro no site -->
-      
-
-<div onclick="menuShow()" class="mobile-menu-icon">
-    <button>
-        <i class="fa-solid fa-bars"></i>
-    </button>
-</div>
-
-<div class="mobile-menu">
-    <ul>
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="index.html">QUEM SOMOS?</a></li>
-        <li><a href="contatos.html">CONTATE-NOS</a></li>
-        <li></li><a href="cursos.html">CURSOS</a>
-        <li><a href="i.a.html">I.A</a></li>
-    </ul>
-</div>
-</div>
 
 <body>
     <header>
@@ -170,31 +151,26 @@
 
 
 
-    <footer>
+    <footer id="imagem3">
         <!-- INÍCIO DO NOSSO RODAPÉ -->
         <nav>
+
+
+         
+
             <!--  Usando o nav para informar que a sessão é navegável -->
             <div class="container-footer">
                 <!-- Um container/Div pai para estilizar e posicionar os itens -->
 
-                <div class="itens-footer1">
-                    <!--  Uma div com âncoras e ícones do font awesome -->
-                    <a href="">
-                        <i class="fa-brands fa-instagram"><span>@digital_class</span></i>
-                    </a>
-                    <a href="">
-                        <i class="fa-solid fa-envelope"><span>digitalClassWorking@gmail.com</span></i>
-                    </a>
-                    <a href="">
-                        <i class="fa-brands fa-facebook"><span>Digital Class</span></i>
-                    </a>
-                </div>
+                   <img src="imagens/Logo-DigitalClass.png"
+            alt="Logo-DigitalClass">
+        <!--  Logo do site  -->
 
 
                 <div class="itens-footer2">
                     <!-- Uma div que guarda uma lista com âncoras -->
-                    <ul>
-                        <a href="">
+                    <ul  class="páginas">
+                        <a href>
                             <li> <span>Páginas</span></li>
                         </a>
                         <a href="home.html">
@@ -206,68 +182,66 @@
                         <a href="contatos.html">
                             <li>Contate-nos</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Cursos</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Blog</li>
                         </a>
                     </ul>
                 </div>
 
-
                 <div class="itens-footer2">
                     <!--  Outra div que também guarda uma lista com âncoras -->
-                    <ul>
-                        <a href="">
+                    <ul class="páginas">
+                        <a href>
                             <li> <span>Contato</span></li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Fale com a Digital Class</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Ouvidoria</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>FAQ</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Trabalhe conosco</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Dúvidas</li>
                         </a>
                     </ul>
                 </div>
 
-
                 <div class="itens-footer2">
                     <!--  Última div que guarda uma lista com âncoras -->
-                    <ul>
-                        <a href="">
+                    <ul class="páginas">
+                        <a href>
                             <li> <span>Soluções</span></li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Recursos Didáticos</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Educação Digital</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Simulados</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Consultoria</li>
                         </a>
-                        <a href="">
+                        <a href>
                             <li>Gestão de ensino</li>
                         </a>
                     </ul>
-
                 </div>
-        </nav>
-        <img src="imagens/Logo-DigitalClass.png" alt="Logo-DigitalClass">
-        <!--  Logo do site  -->
+
+
+
+            </nav>
         </div>
 
     </footer>
