--- a/cursos.html
+++ b/cursos.html
@@ -17,6 +17,11 @@
 
 
 <body>
+
+    <div class="whatsapp">
+        <img src="imagens/whatsapplogo.png" alt="">
+    </div>  
+
     <header>
         <!-- Início do cabeçalho -->
         <img src="imagens/Logo-DigitalClass.png" alt="icon-digital-DigitalClass">
