--- a/home.html
+++ b/home.html
@@ -15,6 +15,9 @@
     <!-- INÍCIO DA PÁGINA HOME -->
     <body>
 
+        <div class="whatsapp">
+            <img src="imagens/whatsapplogo.png" alt="">
+        </div>        
 
         <header>
             <!-- Início do cabeçalho -->
