--- a/contatos.html
+++ b/contatos.html
@@ -14,6 +14,11 @@
     </head>
     <body>
 
+        <div class="whatsapp">
+            <img src="imagens/whatsapplogo.png" alt="">
+        </div>
+        
+
         <header>
             <!-- Início do cabeçalho -->
             <img src="imagens/Logo-DigitalClass.png"
