--- a/i.a.html
+++ b/i.a.html
@@ -17,7 +17,7 @@
 <!-- Início do cabeçalho -->
 <img src="imagens/Logo-DigitalClass.png" alt="icon-digital-DigitalClass"> 
         <!-- Logo do site -->
-<ul>
+<ul id="nav-bar">
 <!-- Uma lista com âncoras -->
     <a href="home.html">HOME</a>
     <a href="index.html">QUEM SOMOS?</a>
@@ -26,6 +26,23 @@
     <a href="i.a.html">I.A</a>
 </ul>
  
+
+<div onclick="menuShow()" class="mobile-menu-icon">
+    <button>
+        <i class="fa-solid fa-bars"></i>
+    </button>
+</div>
+
+<div class="mobile-menu">
+    <ul>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="index.html">QUEM SOMOS?</a></li>
+        <li><a href="contatos.html">CONTATE-NOS</a></li>
+        <li></li><a href="cursos.html">CURSOS</a>
+        <li><a href="i.a.html">I.A</a></li>
+    </ul>
+</div>
+</div>
 
     </header>
 <!-- Fim do cabeçalho -->
