--- a/contatos.html
+++ b/contatos.html
@@ -38,7 +38,16 @@
                     <i class="fa-solid fa-bars"></i>
                 </button>
             </div>
-
+    
+            <div class="mobile-menu">
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="index.html">QUEM SOMOS?</a></li>
+                    <li><a href="contatos.html">CONTATE-NOS</a></li>
+                    <li></li><a href="cursos.html">CURSOS</a>
+                    <li><a href="i.a.html">I.A</a></li>
+                </ul>
+            </div>
         </header>
         <!-- Fim do cabeçalho -->
 
