--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <img src="imagens/Logo-DigitalClass.png"
                 alt="icon-digital-DigitalClass">
             <!-- Logo do site -->
-            <ul>
+            <ul id="nav-bar">
                 <!-- Uma lista com âncoras -->
                 <a href>HOME</a>
                 <a href="index.html">QUEM SOMOS?</a>
@@ -33,6 +33,22 @@
                 <a href="i.a.html">I.A</a>
             </ul>
 
+            <div onclick="menuShow()" class="mobile-menu-icon">
+                <button>
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+            </div>
+    
+            <div class="mobile-menu">
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="index.html">QUEM SOMOS?</a></li>
+                    <li><a href="contatos.html">CONTATE-NOS</a></li>
+                    <li></li><a href="cursos.html">CURSOS</a>
+                    <li><a href="i.a.html">I.A</a></li>
+                </ul>
+            </div>
+        </div>
        
         </header>
         <!-- Fim do cabeçalho -->
