--- a/cursos.html
+++ b/cursos.html
@@ -27,7 +27,7 @@
         <img src="imagens/Logo-DigitalClass.png" alt="icon-digital-DigitalClass">
         <!-- Logo do site -->
 
-        <nav class="menu-desktop">
+        <nav id="nav-bar" class="menu-desktop">
             <ul>
                 <!-- Uma lista com âncoras -->
                 <a href="home.html">HOME</a>
