--- a/contatos.html
+++ b/contatos.html
@@ -15,7 +15,7 @@
     <body>
 
         <header>
-            <!-- Início do cabeçalho -->
+            <!-- Início do cabeçalho da nossa página -->
             <img src="imagens/Logo-DigitalClass.png"
                 alt="icon-digital-DigitalClass">
             <!-- Logo do site -->
@@ -63,6 +63,7 @@
                     </a>
                 </div>
 
+            <!-- Parágrafos da sessão do contato da página -->
                 <p>
                     A Digital class é uma plataforma de educação que, por meio
                     de escolas parceiras, está presente em todo o Brasil,
@@ -258,6 +259,8 @@
                 <div class="vw-plugin-top-wrapper"></div>
             </div>
         </div>
+
+        <!-- Aqui os links do javaScript -->
         <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
         <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
