--- a/cursos.html
+++ b/cursos.html
@@ -37,6 +37,8 @@
 
     <main>
 
+
+    <!-- Aqui é a primera sessãon dessa página -->
         <section class="sessão-1">
 
             <div class="imagem-cabecalho">
