--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Inicio da pagina-->
 
 <div class="whatsapp">
-    <img src="imagens/whatsapplogo.png" alt="">
+    <img src="imagens/whatsapplogo.png" alt="icon-whatsapp">
 </div>
 
 <!--  div ultilizada para colocar a logo do sit    -->
