--- a/contatos.html
+++ b/contatos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
     <body>
 
         <div class="whatsapp">
-            <img src="imagens/whatsapplogo.png" alt="">
+            <img src="imagens/whatsapplogo.png" alt="Logo-Whatsapp">
         </div>
         
 
@@ -55,7 +55,7 @@
             <!-- Main para informar que está é a parte principal do site -->
             <section class="section-1">
 
-                <h1>Entre em contato conosco <br> para tirar duvidas, feedback,
+                <h1>Entre em contato conosco <br> para tirar dúvidas, feedback,
                     ou
                     criticas</h1>
 
@@ -63,7 +63,7 @@
                     <a href>
                         <button type="button">
 
-                            Suas Duvidas
+                            Suas Dúvidas
 
                         </button>
                     </a>
