--- a/cursos.html
+++ b/cursos.html
@@ -4,39 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css"> <!-- CSS LINKADO -->
+    <link rel="stylesheet" href="cursos.css"> <!-- CSS LINKADO -->
     <title>Digital Class | Site Oficial</title> <!-- Titulo da página -->
     <link rel="shortcut icon" href="imagens/Logo-DigitalClass.png" type="image/x-icon"> <!-- Ícone da página-->
     <script src="https://kit.fontawesome.com/c65f603f95.js" crossorigin="anonymous"></script>
     <!-- Ícones do font awesome-->
     <script src="https://kit.fontawesome.com/1d0d8f42ce.js" crossorigin="anonymous"></script>
     <!-- Ícones do font awesome-->
-    <link rel="stylesheet" href="cursos.css">
 </head>
 <!-- INÍCIO DA PÁGINA CURSOS -->
 
 
 <body>
 
+   
     <div class="whatsapp">
-        <img src="imagens/whatsapplogo.png" alt="">
-    </div>  
+        <img src="imagens/whatsapplogo.png" alt="Logo-Whatsapp">
+    </div>
+    
 
     <header>
-        <!-- Início do cabeçalho -->
-        <img src="imagens/Logo-DigitalClass.png" alt="icon-digital-DigitalClass">
+        <!-- Início do cabeçalho da nossa página -->
+        <img src="imagens/Logo-DigitalClass.png"
+            alt="icon-digital-DigitalClass">
         <!-- Logo do site -->
-
-        <nav id="nav-bar" class="menu-desktop">
-            <ul>
-                <!-- Uma lista com âncoras -->
-                <a href="home.html">HOME</a>
-                <a href="index.html">QUEM SOMOS?</a>
-                <a href="contatos.html">CONTATE-NOS</a>
-                <a href="cursos.html">CURSOS</a>
-                <a href="i.a.html">I.A</a>
-            </ul>
-        </nav>
+        <ul>
+            <!-- Uma lista com âncoras -->
+            <a href="home.html">HOME</a>
+            <a href="index.html">QUEM SOMOS?</a>
+            <a href="contatos.html">CONTATE-NOS</a>
+            <a href="cursos.html">CURSOS</a>
+            <a href="i.a.html">I.A</a>
+        </ul>
 
         <div onclick="menuShow()" class="mobile-menu-icon">
             <button>
@@ -53,6 +52,7 @@
                 <li><a href="i.a.html">I.A</a></li>
             </ul>
         </div>
+   
 
     </header>
     <!-- Fim do cabeçalho -->
@@ -164,7 +164,7 @@
 
         <section class="sessão-4">
 
-            <img src="imagens/img-section4 (1).png" alt="">
+            <img src="imagens/img-section4 (1).png" alt="img-section4">
 
             <h5>Quer aprender com a nossa instituição?</h5>
 
