--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--  div ultilizada para colocar a logo do sit    -->
     <div class="div">
         <div class="image-header">
-            <img src="imagens/Logo-DigitalClass.png" alt="">
+            <img src="imagens/Logo-DigitalClass.png" alt="Logo-DigitalClass">
         </div>
 
 <!-- div ultilizada para colocar as ancora da pagina  -->
@@ -54,7 +54,7 @@
     </div>
 
     <div class="header-mobile">
-        <img src="imagens/GirlwallpaperHeader.png" alt="">
+        <img src="imagens/GirlwallpaperHeader.png" alt="Icon-Girl">
     </div>
 
     <!-- Inicio do header -->
@@ -113,7 +113,7 @@
 <!-- div ultilizada para o segundo tema da section 1  -->
                 <div class="text text2">
                     <div class="content">
-  <img src="imagens/Card.png" alt=""> <!-- imagen   -->
+  <img src="imagens/Card.png" alt="img-card"> <!-- imagen   -->
 
                         <div class="text-content">
                         <p>  <!-- paragrafo -->
@@ -218,7 +218,7 @@
                 <div id="imageThree" class="flex-s3">
                     
                     <div class="image-s3">
-                        <img src="imagens/Girl-smartphone.png" alt="">
+                        <img src="imagens/Girl-smartphone.png" alt="img-smartphone">
                     </div>
                     <div class="texts3">
                         <h2>
@@ -235,7 +235,7 @@
 
                 <div id="imageThree" class="flex-s3">
                     <div class="image-s3">
-                        <img src="imagens/Nootbook.png" alt="">
+                        <img src="imagens/Nootbook.png" alt="img-Nootbook">
                     </div>
                     <div class="texts3">
                         <h2>
@@ -344,7 +344,7 @@
                     </nav>
                 </div>
 
-                <img src="imagens/Logo-DigitalClass.png" alt="Logo Digital Class">
+        
             </footer>
             <!--  FIM DO RODAPÉ -->
 
