--- a/cursos.html
+++ b/cursos.html
@@ -19,7 +19,7 @@
 
    
     <div class="whatsapp">
-        <img src="imagens/whatsapplogo.png" alt="Logo-Whatsapp">
+        <a href="https://web.whatsapp.com/"><img src="imagens/whatsapplogo.png" alt="icon-whatsapp"></a>
     </div>
     
 
@@ -39,7 +39,7 @@
 
         <div onclick="menuShow()" class="mobile-menu-icon">
             <button>
-                <i class="fa-solid fa-bars"></i>
+                <img id="imageBar" src="imagens/image-bar.png" alt="Bar-header">
             </button>
         </div>
 
