--- a/i.a.html
+++ b/i.a.html
@@ -29,7 +29,7 @@
 
 <div onclick="menuShow()" class="mobile-menu-icon">
     <button>
-        <i class="fa-solid fa-bars"></i>
+        <img id="imageBar" src="imagens/image-bar.png" alt="Bar-header">
     </button>
 </div>
 
