--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Inicio da pagina-->
 
 <div class="whatsapp">
-    <img src="imagens/whatsapplogo.png" alt="icon-whatsapp">
+    <a href="https://web.whatsapp.com/"><img src="imagens/whatsapplogo.png" alt="icon-whatsapp"></a>
 </div>
 
 <!--  div ultilizada para colocar a logo do sit    -->
@@ -38,7 +38,7 @@
       
         <div onclick="menuShow()" class="mobile-menu-icon">
             <button>
-                <i class="fa-solid fa-bars"></i>
+                <img id="imageBar" src="imagens/image-bar.png" alt="Bar-header">
             </button>
         </div>
 
@@ -113,7 +113,7 @@
 <!-- div ultilizada para o segundo tema da section 1  -->
                 <div class="text text2">
                     <div class="content">
-  <img src="imagens/Card.png" alt="img-card"> <!-- imagen   -->
+  <img id="imageText" src="imagens/Card.png" alt="img-card"> <!-- imagen   -->
 
                         <div class="text-content">
                         <p>  <!-- paragrafo -->
@@ -252,6 +252,8 @@
     </main>
 
     <footer id="imagem3">
+            <img id="imageLogo" src="imagens/Logo-DigitalClass.png" alt="LogoDigital">
+
                 <!-- INÍCIO DO NOSSO RODAPÉ -->
                 <nav>
 
