--- a/contatos.html
+++ b/contatos.html
@@ -15,7 +15,7 @@
     <body>
 
         <div class="whatsapp">
-            <img src="imagens/whatsapplogo.png" alt="Logo-Whatsapp">
+            <a href="https://web.whatsapp.com/"><img src="imagens/whatsapplogo.png" alt="icon-whatsapp"></a>
         </div>
         
 
@@ -35,7 +35,7 @@
 
             <div onclick="menuShow()" class="mobile-menu-icon">
                 <button>
-                    <i class="fa-solid fa-bars"></i>
+                    <img id="imageBar" src="imagens/image-bar.png" alt="Bar-header">
                 </button>
             </div>
     
